# nolas

./: .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile-k8s  LICENSE  Makefile  README.md  alembic.ini  database.py  docker-compose.yml  environment.py  gunicorn.conf.py  logging_config.py  main.py  manage.py  migrate.py  models.py  pyproject.toml  run_fastapi.py
.claude/commands/: pr-description.md
app/: container.py  create_app.py  database.py  db.py  exceptions.py
app/api/: routes.py
app/constants/: emails.py
app/controllers/: container.py
app/debug/: __init__.py  debug_startup.py  debug_utils.py
app/models/: __init__.py  account.py  app.py  base.py  connection_health.py  email.py  job.py  oauth2.py  uid_tracking.py  webhook_log.py
app/repos/: __init__.py  account.py  app.py  base.py  connection_health.py  container.py  email.py  job.py  oauth2.py  uid_tracking.py  webhook_log.py
app/services/: container.py  google_oidc.py
app/utils/: message_utils.py  password.py
lib/: email_processor.py
lib/imap/: __init__.py  connection.py  listener.py  models.py
migrations/: alembic.ini  env.py
migrations/versions/: 20250629_123035_9e896b850c97_initial_migration.py  20250629_191309_7fe0d02cfc09_add_api_key.py  f867cdfdf44a_create_initial_tables.py  (+7 more)
settings/: __init__.py  log.py  settings.py  test_settings.py
tests/: test_gmail_query.py  test_google_oidc.py  test_graph_query.py  test_job_processor.py  test_mime.py  test_notification_queue.py
workers/: cluster_manager.py  email_watcher.py  job_processor.py  subscription_renewal.py  worker_config.py
(+75 files in other folders)
